--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,10 +5,9 @@ environment:
 
 install:
   - appveyor DownloadFile https://github.com/AutoHotkey/AutoHotkey/releases/download/v1.0.48.05/AutoHotkey104805_Install.exe -FileName ahk_install.exe
-  - .\autohotkey_install.exe /S /D=C:\ahk
-  - C:\python37\python.exe -m pip install .
+  - .\ahk_install.exe /S /D=C:\ahk
 
 build: off
 
 test_script:
-  - echo "Hello"
+  - python -c "from ahk import AHK;ahk=AHK();ahk.mouse_move(100,100);"
