add scripts, tests

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,22 @@
-version: '1.0.{build}'
+version: '0.1.{build}'
 
 environment:
   AHK_PATH: C:\ahk\AutoHotkey.exe
   AHK_DEBUG: true
 
 install:
-  - appveyor DownloadFile https://github.com/AutoHotkey/AutoHotkey/releases/download/v1.0.48.05/AutoHotkey104805_Install.exe -FileName ahk_install.exe
-  - .\ahk_install.exe /S /D=C:\ahk
+  - choco install autohotkey
+  - .\ci\install.ps1
 
-build: off
+build_script:
+  - py -3.7 setup.py sdist bdist_wheel
+
+artifacts:
+  - name: dist
+    path: dist\*
 
 test_script:
-  - C:\python37\python.exe -c "from ahk import AHK;ahk=AHK();ahk.mouse_move(100,100);"
+  - .\ci\runtests.ps1
+
+after_test:
+  - coveralls
