--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,7 @@ environment:
 
 install:
   - ps: |
-      if (!(Test-Path ahk_install.exe) {
+      if (!(Test-Path ahk_install.exe)) {
           echo "Downloading AHK installer"
           appveyor DownloadFile https://github.com/Lexikos/AutoHotkey_L/releases/download/v1.1.30.01/AutoHotkey_1.1.30.01_setup.exe -FileName ahk_install.exe
       } else {
