--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,11 +26,13 @@ test_script:
   - powershell .\ci\runtests.ps1
 
 on_finish:
-  - cmd: |
-      venv\Scripts\activate.bat
-      IF defined COVERALLS_REPO_TOKEN (
-      python -m coveralls
-      )
+  - ps: |
+      venv\Scripts\activate.ps1
+      if (Test-Path env:COVERALLS_REPO_TOKEN ) { 
+      cmd /c python -m coveralls
+      } else {
+      echo "Skipping coveralls reporting for external PR"
+      }
       
 
 cache:
