--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,13 +26,9 @@ test_script:
   - powershell .\ci\runtests.ps1
 
 on_finish:
-  - ps: |
-      venv\Scripts\activate.ps1
-      if (Test-Path env:COVERALLS_REPO_TOKEN ) { 
-      cmd /c python -m coveralls
-      } else {
-      echo "Skipping coveralls reporting for external PR"
-      }
+  - cmd: |
+      venv\Scripts\activate.bat
+      IF DEFINED COVERALLS_REPO_TOKEN (python -m coverage) ELSE (echo skipping coveralls report for external pr)
       
 
 cache:
