--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,11 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: double-quote-string-fixer
+-   repo: https://github.com/psf/black
+    rev: '21.10b0'
+    hooks:
+    -   id: black
+        args:
+            - "-S"
+            - "-l"
+            - "120"
