--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pytest coverage
+          python -m pip install pytest coverage ahk-binary
       - name: Test with coverage/pytest
         run: |
           coverage run -m pytest
