--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pytest coverage ahk-binary
+          python -m pip install -r requirements-dev.txt
       - name: Test with coverage/pytest
         run: |
           coverage run -m pytest
