--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,7 +15,9 @@ install:
 
 build_script:
   - cmd: |
+      call venv\Scripts\activate.bat
       py -3.9 setup.py sdist
+      call deactivate
 
 #artifacts:
 #  - name: dist
