--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,6 +2,9 @@ on: [ push, pull_request ]
 
 jobs:
   build:
+    strategy:
+      matrix:
+        python_version: ["3.10", "3.9", "3.8", "3.7"]
     runs-on: windows-latest
     timeout-minutes: 5
     steps:
@@ -10,12 +13,13 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.10"
+          python-version: ${{ matrix.python_version }}
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements-dev.txt
+          python -m pip install .
           python -m pip install ahk-binary
       - name: Test with coverage/pytest
         env:
