--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,6 +3,7 @@ on: [ push, pull_request ]
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
         python_version: ["3.10", "3.9", "3.8", "3.7"]
     runs-on: windows-latest
