--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: ["3.10", "3.9", "3.8", "3.7"]
+        python_version: ["3.10", "3.9", "3.8"]
     runs-on: windows-latest
     timeout-minutes: 5
     steps:
