--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,5 @@ envlist = py38,py39,py310
 deps = -rrequirements-dev.txt
 
 commands =
-    pytest
+    coverage run -m pytest -s
     mypy --strict ahk
