pass ci env in tox

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ envlist = py38,py39,py310
 
 [testenv]
 deps = -rrequirements-dev.txt
-
+passenv = CI
 commands =
     coverage run -m pytest -s
     mypy --strict ahk
