--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,5 @@ passenv =
     CI
     PYTHONUNBUFFERED
 commands =
-    coverage run -m pytest -s -vvv
+    coverage run -m pytest -s -vvv --reruns 5 --only-rerun AssertionError
     mypy --strict ahk
