add hotkey script includes

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ cmdclass =
 ahk =
     py.typed
     daemon.ahk
+    hotkeys.ahk
 
 [build-system]
 requires = ["setuptools", "unasync", "tokenize-rt"]
