--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,13 @@ repos:
         - unasync
         - tokenize_rt
         - black
+  - id: set-constants
+    name: set-constants
+    entry: python _set_constants.py
+    language: python
+    types: [python]
+    pass_filenames: false
+    files: ^(ahk/daemon\.ahk|ahk/_constants\.py)
 
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
