better templating with fallback

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
 
 [options]
 include_package_data = True
@@ -45,5 +46,7 @@ cmdclass =
 [options.package_data]
 ahk =
     py.typed
-    daemon.ahk
-    hotkeys.ahk
+    templates/*.ahk
+
+[bdist_wheel]
+universal = True
