--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ include_package_data = True
 python_requires = >=3.8.0
 packages =
     ahk
+    ahk.templates
     ahk._async
     ahk._sync
 install_requires =
