--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 
 name = ahk
-version = 1.0.0
+version = 1.0.0.post1
 author_email = spencer.young@spyoung.com
 author = Spencer Young
 description = A Python wrapper for AHK
@@ -43,6 +43,9 @@ install_requires =
     jinja2>=3.0
 cmdclass =
     build_py = buildunasync.build_py
+
+[options.extras_require]
+binary = ahk-binary==1.1.33.9
 
 [options.package_data]
 ahk =
