--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 
 name = ahk
-version = 1.0.1
+version = 1.1.0rc1
 author_email = spencer.young@spyoung.com
 author = Spencer Young
 description = A Python wrapper for AHK
