include license in distributions

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include ahk/templates/daemon.ahk
 include ahk/templates/hotkeys.ahk
 include docs/README.md
 include buildunasync.py
+include LICENSE
