--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,7 +21,7 @@ jobs:
           python -m pip install -r requirements-dev.txt
           python -m pip install .
           python -m pip install tox
-          python -m pip install ahk-binary
+          python -m pip install "ahk-binary==2023.9.0rc1"
       - name: Test with coverage/pytest
         timeout-minutes: 10
         env:
