add project urls

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,11 @@ description = A Python wrapper for AHK
 long_description = file: docs/README.md
 long_description_content_type = text/markdown
 url = https://github.com/spyoungtech/ahk
+project_urls =
+    Documentation = https://ahk.readthedocs.io/en/latest/
+    Funding = https://github.com/sponsors/spyoungtech/
+    Source = https://github.com/spyoungtech/ahk
+    Tracker = https://github.com/spyoungtech/ahk/issues
 keywords =
     ahk
     autohotkey
