--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 
 name = ahk
-version = 1.6.3
+version = 1.7.0
 author_email = spencer.young@spyoung.com
 author = Spencer Young
 description = A Python wrapper for AHK
@@ -34,6 +34,8 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Typing :: Typed
 
 [options]
 include_package_data = True
